profile->myRide functionality added